# magpylib-material-response

./: .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  anisotropic_results_magpylib_1000.npy  anisotropic_results_magpylib_15625.npy  anisotropic_results_magpylib_3375.npy  anisotropic_results_magpylib_8000.npy  example_comparison_ansys_magpylib.py  isotropic_results_magpylib_1000.npy  isotropic_results_magpylib_15625.npy  isotropic_results_magpylib_3375.npy  isotropic_results_magpylib_8000.npy  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements_doc.txt  setup.py
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATES/: bug_report.md  documentation-improvements.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py  index.md  index.rst  logging.md  serialization.md
docs/_static/: fullwidth.css
docs/examples/: cuboid1.inp  cuboid2.inp  cuboids_demagnetization.md  femm_data.csv  index.md  serialization.md  soft_magnets.md  soft_magnets_enclosure.md  soft_magnets_mesh_import.md
magpylib_material_response/: __init__.py  demag.py  meshing.py  polyline.py  test_demag.py  utils.py
magpylib_material_response/package_data/datasets/: FEMdata_test_cuboids.json  FEMdata_test_softmag.json
magpylib_response/: __init__.py  demag.py  meshing.py  utils.py
magpylib_response/data/: __init__.py
magpylib_response/package_data/datasets/: FEMdata_test_cuboids.csv  FEMdata_test_cuboids.json  FEMdata_test_softmag.csv
notebooks/: hollow_cyl_enclosure_mm.inp
src/magpylib_material_response/: __init__.py  customMesh.py  demag.py  logging_config.py  meshing.py  meshing_utils.py  polyline.py  utils.py
src/magpylib_material_response/_data/: __init__.py
src/magpylib_material_response/data/: __init__.py
src/magpylib_material_response/package_data/datasets/: FEMdata_test_cuboids.json  FEMdata_test_softmag.csv  FEMdata_test_softmag.json
tests/: test_basic.py  test_demag.py  test_import_mesh.py  test_isotropic_anisotropic.py  test_logging.py  test_meshing.py  test_package.py  test_serialization.py
tests/testdata/: anisotropic_results_ansys.txt  grid_points.pts  isotropic_results_ansys.txt  negative_susceptibility_ansys.txt
